--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
        
     </div>
    </div>
+   <div id="popup-container">
+       <div class="popup">
+           <h2 id="success-message">You Fount The Word!</h2>
+           <button id="play-again"> 
+               Play Again
+           </button>
+       </div>
+   </div>
     
     <script src="script.js"></script>
 </body>
