--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
     </div>
     <div id="popup-container">
         <div class="popup">
-            <h2 id="success-message">You Fount The Word!</h2>
+            <h2 id="popup-message"></h2>
             <button id="play-again">
                 Play Again
             </button>
         </div>
+    </div>
+    <div id="message"  >
+        <p> You Already  Tried This Letter!</p>
+
     </div>
 
     <script src="script.js"></script>
